Structurer l'interface le cours & le portfolio

--- a/html/apprentissage.html
+++ b/html/apprentissage.html
@@ -74,7 +74,7 @@
                 <br>
                 Cupidatat ullamco occaecat nisi ut laborum proident ullamco commodo in. Dolor enim nisi mollit cillum irure officia. Eiusmod duis irure deserunt pariatur sit officia magna deserunt excepteur. Ut est laboris reprehenderit adipisicing mollit dolore tempor do et eu do nulla. Enim labore sit aliqua fugiat ea irure nulla enim qui magna. Excepteur nulla ut deserunt qui ea aliquip adipisicing excepteur exercitation voluptate eu proident commodo nostrud. Velit laboris Lorem adipisicing irure do nisi aliquip eu non enim eiusmod.
                 <br><br>
-                Cette page contient deux parties principales, <a href="#coursR303"><b>les connaissances apprises du cours R3.03</b></a> et <a href="#"><b>les compétences acquises de la conception du portfolio</b></a>.
+                Cette page contient deux parties principales, <a href="#coursR303"><b>les connaissances apprises du cours R3.03</b></a> et <a href="#portfolioR303"><b>les compétences acquises de la conception du portfolio</b></a>.
             </p>
         </div>
     </div>
@@ -84,26 +84,71 @@
         <div class="container">
             <div class="titre">Connaissances apprises du cours R3.03</div>
             <div class="cours__contenu">
-                <!-- Partie 1 - HTML -->
+                <!-- Partie HTML -->
                 <div class="cours__partie cours__html">
-                    <h2 class="cours__titre">html</h2>
-                    
+                    <h2 class="partie__titre">i. html</h2>
+                    <!-- Partie 1 - Introduction -->
+                    <div class="html__partie1">
+                        <h3 class="html__sousTitre">1. Introduction au HTML</h3>
+                        <ul>
+                            <li>Hyper Text Markup Language</li>
+                            <li>W3C et normes HTML</li>
+                            <li>Editeur HTML</li>
+                        </ul>
+                    </div>
+                    <!-- Partie 2 - Ecriture des balises -->
+                    <div class="html__partie2">
+                        <h3 class="html__sousTitre">2. Écriture des balises en HTML</h3>
+                        <ul>
+                            <li>Système balise ouvrante/fermante</li>
+                            <li>Système balise ponctuelle</li>
+                            <li>Structure d'un fichier HTML</li>
+                            <li>Balises HTML</li>
+                            <li>Balises avec attributs</li>
+                            <li>Balises importantes</li>
+                            <li>Élément link</li>
+                            <li>Balises meta</li>
+                        </ul>
+                    </div>
                 </div>
 
-                <!-- Partie 2 - CSS -->
+                <!-- Partie CSS -->
                 <div class="cours__partie cours__css">
-                    <h2 class="cours__titre">css</h2>
+                    <h2 class="partie__titre">ii. css</h2>
                 </div>
 
-                <!-- Partie 3 - JavaScript -->
+                <!-- Partie JavaScript -->
                 <div class="cours__partie cours__js">
-                    <h2 class="cours__titre">javascript</h2>
+                    <h2 class="partie__titre">iii. javascript</h2>
                 </div>
             </div>     
         </div>
     </div>
 
     <!-- DU PORTFOLIO -->
+    <div id="portfolioR303" class="section portfolio">
+        <div class="container">
+            <div class="titre">Compétences acquises de la conception du portfolio</div>
+            <div class="portfolio__contenu">
+                <!-- Partie HTML -->
+                <div class="portfolio__partie portfolio__html">
+                    <h2 class="partie__titre">i. html</h2>
+                </div>
+                <!-- Partie CSS -->
+                <div class="portfolio__partie portfolio__css">
+                    <h2 class="partie__titre">ii. css</h2>
+                </div>
+                <!-- Partie JavaScript -->
+                <div class="portfolio__partie portfolio__js">
+                    <h2 class="partie__titre">iii. javascript</h2>
+                </div>
+                <!-- Autre partie -->
+                <div class="portfolio__partie portfolio__autre">
+                    <h2 class="partie__titre">iv. autres</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER (PIED) -->
     <footer class="footer">
