ajouter les sous-titres pour l'apprentissage

--- a/html/apprentissage.html
+++ b/html/apprentissage.html
@@ -115,11 +115,48 @@
                 <!-- Partie CSS -->
                 <div class="cours__partie cours__css">
                     <h2 class="partie__titre">ii. css</h2>
+                    <!-- Partie 1 - Introduction -->
+                    <div class="css__partie1">
+                        <h3 class="css__sousTitre">1. Introduction au CSS</h3>
+
+                    </div>
+                    <!-- Partie 2 - Philosophie du CSS -->
+                    <div class="css__partie2">
+                        <h3 class="css__sousTitre">2. Philosophie du CSS</h3>
+                    </div>
+                    <!-- Partie 3 - Ecrire du CSS -->
+                    <div class="css__partie3">
+                        <h3 class="css__sousTitre">3. Écrire du CSS</h3>
+                    </div>
+                    <!-- Partie 4 - Display -->
+                    <div class="css__partie4">
+                        <h3 class="css__sousTitre">4. Display</h3>
+                    </div>
+                    <!-- Partie 5 - Classes -->
+                    <div class="css__partie5">
+                        <h3 class="css__sousTitre">5. Classes</h3>
+                    </div>
+                    <!-- Partie 6 - Identifiant vs Classes -->
+                    <div class="css__partie6">
+                        <h3 class="css__sousTitre">6. Identifiant vs Classes</h3>
+                    </div>
+                    <!-- Partie 7 - Pseudo -->
+                    <div class="css__partie6">
+                        <h3 class="css__sousTitre">7. Pseudo</h3>
+                    </div>
                 </div>
 
                 <!-- Partie JavaScript -->
                 <div class="cours__partie cours__js">
                     <h2 class="partie__titre">iii. javascript</h2>
+                    <!-- Partie 1 - Introduction -->
+                    <div class="js__partie1">
+                        <h3 class="js__sousTitre">1. Introduction au JavaScript</h3>
+                    </div>
+                    <!-- Partie 2 - Variables -->
+                    <div class="js__partie2">
+                        <h3 class="js__sousTitre">2. Les variables</h3>
+                    </div>
                 </div>
             </div>     
         </div>
