afficher les compétences par catégorie choisie

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </div>
                 <div id="skills__contenu" class="skills__contenu">
                     <!-- Afficher html ici en utilisant JS -->
-                    <div class="skills__item">
+                    <!-- <div class="skills__item">
                         <div class="skillsItem__content">
                             <p>Skill</p>
                             <p>Percent %</p>
@@ -172,16 +172,7 @@
                         <div class="skillsItem__bar">
                             <div class="bar__value" style="width: 85%;"></div>
                         </div>
-                    </div>
-                    <div class="skills__item">
-                        <div class="skillsItem__content">
-                            <p>Skill</p>
-                            <p>Percent %</p>
-                        </div>                    
-                        <div class="skillsItem__bar">
-                            <div class="bar__value" style="width: 85%;"></div>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
