--- a/html/interet.html
+++ b/html/interet.html
@@ -59,7 +59,7 @@
     <!-- TITRE DE LA PAGE -->
     <div class="section titrePage">
         <div class="container titrePage__items">
-            <h1>intérêt - la radonnée</h1>
+            <h1>intérêt - la randonnée</h1>
             <div class="soulignement"></div>
         </div>
     </div>
@@ -69,11 +69,11 @@
         <div class="container presentation__contenu">
             <h2>Présentation</h2>
             <p>
-                Excepteur qui voluptate anim dolore esse nisi eu. Ipsum laborum culpa ipsum tempor tempor occaecat exercitation quis id proident consectetur ullamco in. Elit ipsum non duis proident tempor do consequat ut non consequat cupidatat. In qui nostrud anim nulla tempor dolore magna velit nostrud labore aliqua duis aute.
-                <br>
-                Lorem pariatur qui aliqua officia ut ea mollit Lorem id consectetur est irure nostrud qui. In occaecat sit minim occaecat. Est deserunt anim officia id velit sint ad laboris labore cillum elit ad magna.
-                <br>
-                Cupidatat ullamco occaecat nisi ut laborum proident ullamco commodo in. Dolor enim nisi mollit cillum irure officia. Eiusmod duis irure deserunt pariatur sit officia magna deserunt excepteur. Ut est laboris reprehenderit adipisicing mollit dolore tempor do et eu do nulla. Enim labore sit aliqua fugiat ea irure nulla enim qui magna. Excepteur nulla ut deserunt qui ea aliquip adipisicing excepteur exercitation voluptate eu proident commodo nostrud. Velit laboris Lorem adipisicing irure do nisi aliquip eu non enim eiusmod.
+                Dans cette page, je vous invite à découvrir l'une de mes activités préférées, c'est <b class="texte__rando">la randonnée</b>. Depuis mon arrivée en France, cette activité est devenue mon passe-temps favori, même si, à l'origine, je n'étais pas vraiment une personne sportive.
+                <br/><br/>
+                La marche en pleine nature me permet de recharger mes batteries, d'explorer de nouveaux trajets, de nouveaux paysages, et de me reconnecter à la nature en écoutant le doux chant <i class="fa-solid fa-music"></i> des oiseaux ou en sentant la caresse du vent <i class="fa-solid fa-wind"></i> sur mon visage.
+                <br/><br/>
+                Pour mieux comprendre comment la randonnée est devenue une véritable passion, je vous propose de parcourir  les différentes sections de cette page. Vous y découvrirez mon histoire, mes parcours favoris, ainsi que les avantages et les leçons que j'ai appris de mes expériences. 
             </p>
         </div>
     </div>
@@ -111,17 +111,16 @@
     <div id="sectionHistoire" class="section histoire">
         <div class="container">
             <div class="titre">Histoire</div>
-            <div class="histoire__contenu">
-                Officia sit sit magna pariatur. Pariatur adipisicing voluptate aute adipisicing officia cupidatat.
-                Excepteur id pariatur cillum ea officia quis do. Aliqua duis qui duis amet ad est velit anim.
-                <br>
-                Dolore ea reprehenderit est sit magna ut nostrud ullamco pariatur reprehenderit aute deserunt
-                exercitation. Voluptate labore non esse qui cillum labore esse. Quis aute reprehenderit irure dolor in.
+            <div class="section__contenu histoire__contenu">
+                La randonnée et arrivée dans ma vie un peu par hasard, grâce à une voisine qui m'a proposée un jour de l'accompagner lors d'une marche. C'est elle qui m'a initiée à la marche de longue distance, mais aussi à la marche nordique. Malheureusement, nous n'avons pas eu beaucoup d'occasions de pratiquer la marche nordique ensemble.
                 <br><br>
-                Fugiat voluptate officia fugiat elit sit eiusmod exercitation ea occaecat officia anim. Dolor minim
-                ipsum ullamco aute aliquip ex cupidatat. Enim magna veniam laborum esse reprehenderit incididunt
-                occaecat id consequat. Quis reprehenderit exercitation aute labore qui ex minim laboris dolor nulla. Do
-                ipsum exercitation ut anim. Dolor nulla aliqua aliqua id.
+                Pour en savoir plus sur la marche nordique, je vous invite à consulter ce lien : 
+                <a class="marche-nordique" href="https://www.ffrandonnee.fr/disciplines/les-disciplines/marche-nordique#:~:text=Elle%20%C3%A9tait%20pratiqu%C3%A9e%20%C3%A0%20l,ainsi%20propuls%C3%A9%20vers%20l'avant." target="_blank">
+                    <i class="fa-regular fa-hand-point-right"></i>
+                    Découvrir la marche nordique.
+                </a>
+                <br><br>
+                Au fil de nos balades, elle m’a apprise à observer les traces jaunes sur les chemins — ces marques discrètes qui servent à indiquer l’itinéraire aux randonneurs. Elle m’a également faite découvrir une application mobile permettant de rechercher de nouveaux parcours et de mieux préparer nos sorties. Elle m’a montrée comment monter les pentes, descendre sans se blesser, et contrôler ma respiration pour garder le bon rythme. Mais au-delà des aspects techniques, j’ai surtout retenu les nombreuses leçons de vie qu’elle partageait pendant nos marches : des échanges sincères qui m’ont donnée le courage de changer la carrière, de reprendre mes études et de poursuivre mes propres aspirations.
             </div>
         </div>
     </div>
@@ -137,6 +136,9 @@
     <div id="sectionParcours" class="section parcours">
         <div class="container">
             <div class="titre">Parcours</div>
+            <div class="section__contenu parcours__contenu">
+                Ma voisine m’a d’abord guidée sur de petits parcours dans la région de la Côte d’Azur: au début, environ 5 km, puis peu à peu 8 km, avant d’atteindre des randonnées de 10 à 12 km en moyenne. Cette époque, nous marchions presque une fois par semaine, et c’est ainsi que j’ai appris à aimer la randonnée, pas à pas.
+            </div>
         </div>
     </div>
 
