ajouter le contenu pour l'histoire

--- a/html/apprentissage.html
+++ b/html/apprentissage.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/x-icon" href="../images/cute.png" />
 
     <!-- Fichier Main JS -->
-    <script src="../js/main.js"></script>
+    <script src="../js/main.js" defer></script>
     
     <title>Kim-Ngan's Portfolio</title>
 </head>
