--- a/html/interet.html
+++ b/html/interet.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/x-icon" href="../images/cute.png" />
 
     <!-- Fichier Main JS -->
-    <script src="../js/main.js"></script>
+    <script src="../js/main.js" defer></script>
 
     <title>Kim-Ngan's Portfolio</title>
 </head>
@@ -115,15 +115,58 @@
         <div class="container">
             <div class="titre">Histoire</div>
             <div class="section__contenu histoire__contenu">
-                La randonnée et arrivée dans ma vie un peu par hasard, grâce à une voisine qui m'a proposée un jour de l'accompagner lors d'une marche. C'est elle qui m'a initiée à la marche de longue distance, mais aussi à la marche nordique. Malheureusement, nous n'avons pas eu beaucoup d'occasions de pratiquer la marche nordique ensemble.
+                La randonnée est arrivée dans ma vie un peu par hasard, grâce à une voisine qui m'a proposée un jour de l'accompagner lors d'une marche. C'est elle qui m'a initiée à la marche de longue distance, mais aussi à la marche nordique. Malheureusement, nous n'avons pas eu beaucoup d'occasions de pratiquer la marche nordique ensemble.
                 <br><br>
                 Pour en savoir plus sur la marche nordique, je vous invite à consulter ce lien : 
-                <a class="marche-nordique" href="https://www.ffrandonnee.fr/disciplines/les-disciplines/marche-nordique#:~:text=Elle%20%C3%A9tait%20pratiqu%C3%A9e%20%C3%A0%20l,ainsi%20propuls%C3%A9%20vers%20l'avant." target="_blank">
+                <a class="lien marche-nordique" href="https://www.ffrandonnee.fr/disciplines/les-disciplines/marche-nordique#:~:text=Elle%20%C3%A9tait%20pratiqu%C3%A9e%20%C3%A0%20l,ainsi%20propuls%C3%A9%20vers%20l'avant." target="_blank">
                     <i class="fa-regular fa-hand-point-right"></i>
                     Découvrir la marche nordique.
                 </a>
                 <br><br>
-                Au fil de nos balades, elle m’a apprise à observer les traces jaunes sur les chemins — ces marques discrètes qui servent à indiquer l’itinéraire aux randonneurs. Elle m’a également faite découvrir une application mobile permettant de rechercher de nouveaux parcours et de mieux préparer nos sorties. Elle m’a montrée comment monter les pentes, descendre sans se blesser, et contrôler ma respiration pour garder le bon rythme. Mais au-delà des aspects techniques, j’ai surtout retenu les nombreuses leçons de vie qu’elle partageait pendant nos marches : des échanges sincères qui m’ont donnée le courage de changer la carrière, de reprendre mes études et de poursuivre mes propres aspirations.
+                Au fil de nos balades, j'ai eu la chance d'apprendre énormément grâce à elle.
+                <ul class="histoire__lecons">
+                    <li>
+                        <div class="lecon__texte">
+                            Elle m'a faite découvrir plusieurs applications mobiles qui permettent de rechercher de nouveaux itinéraires, de consulter les dénivelés, la distance ou le temps du trajet complet, ou encore de suivre le tracé GPS en temps réel lors de la randonnée.  
+                        </div>
+                    </li>
+                    <br>
+                    <li>
+                        <div class="lecon__texte lecon__balisage">
+                            <img class="img__balise" src="../images/balises-jaunes.webp" alt="balisage-jaune">
+                            Lors de nos randonnées, elle m'a toujours apprise à observer attentivement ce qui nous entourait. Par exemple, elle m'a expliquée l'importance des balises jaunes peintes sur les rochers ou les troncs d'arbres. Ces marques servent à guider les radonneurs et à éviter de se perdre, tout en assurant une marche en toute sécurité le long des sentiers. 
+                            <br><br>
+                            Le balisage que nous rencontrions le plus souvent était le balisage jaune, aussi appelé <b><i>"les itinéraires de Promenade et de Randonnée (PR)"</i></b>. Ce sont les parcours les plus répandus en France, ils correspondent généralement à des sentiers de courte durée, de quelques heures seulement. Certains peuvent être un peu plus long, mais n'excèdent pas une journée de marche.
+                            <br>
+                            Parfois, nous avons aussi croisé des balisages blancs et rouges, qui indiquent <b><i>"les itinéraires de Grande Randonnée (GR)"</i></b>. 
+                            <br><br>
+                            Pour en savoir plus sur les différents types de balisage, je vous invite à consulter ce lien:
+                            <a class="lien" href="https://posenature.fr/balisage-en-randonnee/" target="_blank">
+                                <i class="fa-regular fa-hand-point-right"></i>
+                                Découvrir les différents types de balisage 
+                            </a>
+                        </div>
+                    </li>
+                    <br>
+                    <li>
+                        <div class="lecon__texte lecon__rythme">
+                            <img class="img__rythme" src="../images/respiration.jpg" alt="respiration">
+                            Elle m’a également enseignée les bons gestes techniques lors de la marche, précisément comment monter les pentes sans s’épuiser, comment descendre avec stabilité, et surtout comment contrôler ma respiration pour garder un rythme régulier. 
+                            <br><br>
+                            Ces conseils m’ont permise de comprendre que la randonnée est autant une discipline physique qu’un exercice de concentration et d’écoute de soi.
+                            <br><br><br><br>
+                        </div>
+                    </li>
+                    <br>
+                    <li>
+                        <div class="lecon__texte lecon__lavie">
+                            <img class="img__courage" src="../images/courage.jpg" alt="courage">
+                            Mais au-delà des randonnées, les choses les plus précieuses pour moi, ce sont nos discussions. Pendant nos longues marches, elle partageait avec moi sa vision de la vie, le courage d’avancer malgré les obstacles, et l’importance de rester fidèle à soi-même. 
+                            <br><br>
+                            Ces échanges sincères et profonds ont été pour moi une véritable source d’inspiration. Ils m’ont donnée la force de changer de voie, de reprendre mes études, et de poursuivre mes rêves avec confiance et détermination.
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
