--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/x-icon" href="./images/cute.png" />
 
     <!-- Fichier Main JS -->
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
     
     <title>Kim-Ngan's Portfolio</title>
 </head>
@@ -124,26 +124,6 @@
     </div>
 
     <!-- COMPÉTENCES -->
-    <!-- <div class="section competences">
-        <div class="container">
-            <div class="titre">Compétences</div>
-            <div class="skills" id="skills"> -->
-
-                <!-- Afficher html ici en utilisant JS -->
-                <!-- <div class="skills__item">
-                    <div class="skillsItem__content">
-                        <p>Skill</p>
-                        <p>Percent %</p>
-                    </div>
-                    <div class="skillsItem__bar">
-                        <div class="bar__value" style="width: 85%;"></div>
-                    </div>
-                </div> -->
-            <!-- </div>
-        </div>
-    </div> -->
-
-    <!-- COMPÉTENCES - V2 -->
     <div class="section competences">
         <div class="container">
             <div class="titre">Compétences</div>
