Ajouter le contenu pour la section matériels

--- a/html/interet.html
+++ b/html/interet.html
@@ -175,6 +175,42 @@
     <div id="sectionMateriels" class="section materiels">
         <div class="container">
             <div class="titre">Matériels nécessaires</div>
+            <div class="section__contenu materiel__contenu">
+                Afin de vivre pleinement cette expérience, il est essentiel d'être bien préparé, dans cette section, je vous présente les matériels nécessaires pour partir en randonnée dans de bonnes conditions.
+                
+                <div class="materiel__liste">
+                    <div class="materiel__article">
+                        <div class="article__img">
+                            <img src="../images/chaussures.jpg" alt="chaussures-randonnees">
+                        </div>
+                        <p>Chaussures de randonnées</p>
+                    </div>
+                    <div class="materiel__article">
+                        <div class="article__img">
+                            <img src="../images/casquette.jpg" alt="chapeau">
+                        </div>
+                        <p>Chapeau de randonnées</p>
+                    </div>
+                    <div class="materiel__article">
+                        <div class="article__img">
+                            <img src="../images/bouteille-eau.avif" alt="bouteille-deau">
+                        </div>
+                        <p>Bouteille d'eau</p>
+                    </div>
+                    <div class="materiel__article">
+                        <div class="article__img">
+                            <img src="../images/vetements.avif" alt="vetements">
+                        </div>
+                        <p>Tenue de randonnées</p>
+                    </div>
+                    <div class="materiel__article">
+                        <div class="article__img">
+                            <img src="../images/baton.jpg" alt="batons">
+                        </div>
+                        <p>Batôns de randonnées</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
