ajouter des photos et le contenu pour la galeries

--- a/html/interet.html
+++ b/html/interet.html
@@ -94,13 +94,7 @@
                         <a href="#sectionMateriels">Matériels essentiels</a>
                     </li>
                     <li>
-                        <a href="#sectionParcours">Parcours</a>
-                    </li>
-                    <li>
                         <a href="#sectionAvantages">Avantages</a>
-                    </li>
-                    <li>
-                        <a href="#sectionConseils">Conseils & bonnes pratiques</a>
                     </li>
                     <li>
                         <a href="#sectionGaleries">Galeries</a>
@@ -214,27 +208,45 @@
         </div>
     </div>
 
-    <!-- PARCOURS -->
-    <div id="sectionParcours" class="section parcours">
-        <div class="container">
-            <div class="titre">Parcours</div>
-            <div class="section__contenu parcours__contenu">
-                Ma voisine m’a d’abord guidée sur de petits parcours dans la région de la Côte d’Azur: au début, environ 5 km, puis peu à peu 8 km, avant d’atteindre des randonnées de 10 à 12 km en moyenne. Cette époque, nous marchions presque une fois par semaine, et c’est ainsi que j’ai appris à aimer la randonnée, pas à pas.
-            </div>
-        </div>
-    </div>
-
     <!-- AVANTAGES -->
     <div id="sectionAvantages" class="section avantages">
         <div class="container">
             <div class="titre">Avantages</div>
-        </div>
-    </div>
-
-    <!-- CONSEILS -->
-    <div id="sectionConseils" class="section conseils">
-        <div class="container">
-            <div class="titre">Conseils & bonnes pratiques</div>
+            <div class="section__contenu avantages__contenu">
+                Après avoir découvert les matériels nécessaires pour la randonnée, il est temps de s'intéresser à ce que la randonnée apporte réellement.
+                <br><br>
+                Au-delà du plaisir de marcher, cette activité offre de nombreux bienfaits, aussi bien pour le corps que pour l'esprit. Dans cette section, je vous partage les avantages que j'ai pu observer et ressentir au fil de mes propres expériences.
+                <br><br>
+                Les avantages de la randonnées <i class="fa-solid fa-person-hiking"></i>
+                <ul class="avantages__liste">
+                    <li>
+                        <b>Amélioration de la santé physique</b> <i class="fa-solid fa-heart-circle-plus"></i> : Il est indéniable que marcher régulièrement en montagne ou en forêt renforce le coeur, stimule la circulation sanguine et contribue à maintenir une bonne condition physique, sans nécessiter d'effort excessif.
+                    </li>
+                    <br>
+                    <li>
+                        <b>Amélioration la santé mentale et diminuation des pensées négatives</b> <i class="fa-solid fa-battery-full"></i> : J'ai remarqué que le fait d'être entourée par la nature apaise le stress, améliore la concentration et favorise un véritable lâcher-prise. C'est une excellente manière de se déconnecter du quotidien et de retrouver un équilibre intérieur.
+                    </li>
+                    <br>
+                    <li>
+                        <b>Renforcement de la persévérance</b> <i class="fa-solid fa-mountain"></i> : Chaque montée, chaque étape franchie apprend la patience et la satisfaction de progresser à son rythme.
+                    </li>
+                    <br>
+                    <li>
+                        <b>Connexion avec la nature</b><i class="fa-solid fa-tree"></i> : La randonnée me permet de redécouvrir la beauté du monde qui m'entoure en observant les arbres verdoyants, en comtemplant le ciel bleu, en écoutant le chant des oiseaux, ou en sentant la caresse du vent sur mon visage.
+                        Tous ces petits moments simples me rapellent de ralentir le rythme, de vivre pleinement le moment présent, et m'apportent un profond sentiment de paix et de joie.
+                    </li>
+                    <br>
+                    <li>
+                        <b>Moments de partage</b> <i class="fa-solid fa-comments"></i> : Il y a toujours de fortes chances de croiser d'autres randonneurs lors de la randonnée. Cela nous permet d'avoir une belle occasion de créer de nouvelles amitiés ou de faire des renconres enrichissantes tout au long du chemin.
+                    </li>
+                </ul>
+                <br>
+                Pour en savoir plus sur les autres bénéfices de la randonnée, je vous invite à consulter ce lien : 
+                <a class="lien" href="https://www.ridestore.com/fr/mag/13-bienfaits-de-la-randonnee-pour-ton-corps-et-ton-esprit/" target="_blank">
+                    <i class="fa-regular fa-hand-point-right"></i>
+                    Découvrir les bienfaits de la randonnée
+                </a>
+            </div>
         </div>
     </div>
 
@@ -242,6 +254,88 @@
     <div id="sectionGaleries" class="section galeries">
         <div class="container">
             <div class="titre">Galeries</div>
+            <div class="section__contenu galeries__contenu">
+                Après avoir partagé mes expériences et les apprentissages tirés de mes randonnées, je vous invite, dans cette section, à découvrir quelques souvenirs capturés <i class="fa-solid fa-camera"></i> au fil de mes balades avec ma voisine, entre montagnes, forêts et littoraux, autant de paysages qui ont marqué mes pas et mes souvenirs.
+                <div class="galeries__liste">
+                    <div class="galerie__img img-1">
+                        <img src="../images/avr24-clermont.JPG" alt="img-clermont">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-2">
+                        <img src="../images/janv24-nice.JPG" alt="img-nice">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-3">
+                        <img src="../images/aout23-cassis.JPG" alt="img-cassis">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/juin24-mezos.jpg" alt="img-mezos">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/mai24-hyeres.JPG" alt="img-hyeres">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/janv24.JPG" alt="img-cote-dazur">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/sep23-corse.JPG" alt="img-corse">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/sept23-nice.JPG" alt="img-nice">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/dec24-ares.JPG" alt="img-ares">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/mars24-stmichel.JPG" alt="img-stmichel">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img">
+                        <img src="../images/fev25-espagne.JPG" alt="img-espagne">
+                        <div class="img__contenu">
+                            <p>Date</p>
+                            <p>Lieu</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
