Finir la page d'intérêt

--- a/html/interet.html
+++ b/html/interet.html
@@ -257,81 +257,88 @@
             <div class="section__contenu galeries__contenu">
                 Après avoir partagé mes expériences et les apprentissages tirés de mes randonnées, je vous invite, dans cette section, à découvrir quelques souvenirs capturés <i class="fa-solid fa-camera"></i> au fil de mes balades avec ma voisine, entre montagnes, forêts et littoraux, autant de paysages qui ont marqué mes pas et mes souvenirs.
                 <div class="galeries__liste">
-                    <div class="galerie__img img-1">
-                        <img src="../images/avr24-clermont.JPG" alt="img-clermont">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img img-2">
-                        <img src="../images/janv24-nice.JPG" alt="img-nice">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img img-3">
-                        <img src="../images/aout23-cassis.JPG" alt="img-cassis">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img">
-                        <img src="../images/juin24-mezos.jpg" alt="img-mezos">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img">
-                        <img src="../images/mai24-hyeres.JPG" alt="img-hyeres">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img">
-                        <img src="../images/janv24.JPG" alt="img-cote-dazur">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img">
-                        <img src="../images/sep23-corse.JPG" alt="img-corse">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img">
-                        <img src="../images/sept23-nice.JPG" alt="img-nice">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img">
-                        <img src="../images/dec24-ares.JPG" alt="img-ares">
-                        <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
-                        </div>
-                    </div>
-                    <div class="galerie__img">
+                    <div class="galerie__img img-1 hor">
                         <img src="../images/mars24-stmichel.JPG" alt="img-stmichel">
                         <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
+                            <p>Mars 2024</p>
+                            <p>Mont-Saint-Michel</p>
                         </div>
                     </div>
-                    <div class="galerie__img">
+                    <div class="galerie__img img-2 hor">
+                        <img src="../images/janv24-nice.JPG" alt="img-nice">
+                        <div class="img__contenu">
+                            <p>Janvier 2024</p>
+                            <p>Observatoire de la Côte d'Azur</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-3 vert">
+                        <img src="../images/aout23-cassis.JPG" alt="img-cassis">
+                        <div class="img__contenu">
+                            <p>Août 2023</p>
+                            <p>Cassis</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-4 hor">
+                        <img src="../images/juin24-mezos.jpg" alt="img-mezos">
+                        <div class="img__contenu">
+                            <p>Juin 2024</p>
+                            <p>Mézos</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-5 hor">
+                        <img src="../images/mai24-hyeres.JPG" alt="img-hyeres">
+                        <div class="img__contenu">
+                            <p>Mai 2024</p>
+                            <p>Hyères</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-6 vert">
+                        <img src="../images/sept23-nice.JPG" alt="img-nice">
+                        <div class="img__contenu">
+                            <p>Septembre 2023</p>
+                            <p>Nice</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-7 hor">
+                        <img src="../images/janv24.JPG" alt="img-cote-dazur">
+                        <div class="img__contenu">
+                            <p>Janvier 2024</p>
+                            <p>Côte d'Azur</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-8 hor">
+                        <img src="../images/sep23-corse.JPG" alt="img-corse">
+                        <div class="img__contenu">
+                            <p>Septembre 2023</p>
+                            <p>Corse</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-9 hor">
+                        <img src="../images/avr24-clermont.JPG" alt="img-clermont">
+                        <div class="img__contenu">
+                            <p>Avril 2024</p>
+                            <p>Clermont Ferrand</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-10 vert">
+                        <img src="../images/dec24-ares.JPG" alt="img-ares">
+                        <div class="img__contenu">
+                            <p>Décembre 2024</p>
+                            <p>Arès</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-11 hor">
                         <img src="../images/fev25-espagne.JPG" alt="img-espagne">
                         <div class="img__contenu">
-                            <p>Date</p>
-                            <p>Lieu</p>
+                            <p>Février 2025</p>
+                            <p>Gérone</p>
+                        </div>
+                    </div>
+                    <div class="galerie__img img-11 hor">
+                        <img src="../images/nov24-albi.JPG" alt="img-albi">
+                        <div class="img__contenu">
+                            <p>Novembre 2024</p>
+                            <p>Albi</p>
                         </div>
                     </div>
                 </div>
